# daktylos

./: .gitignore  .gitmodules  README.md  default.nix  flake.nix  module.nix  qmk.json  result  shell.nix
.github/workflows/: build_binaries.yaml
hid/: CMakeLists.txt
hid/src/: main.c
hidrosis/: .gitignore  CMakeLists.txt  README.md  commands.json
hidrosis/app/: CMakeLists.txt
hidrosis/app/include/: layout.h  log.h  os_type.h  signal_control.h  util.h
hidrosis/app/src/: main.c  os_type.c  signal_control.c  util.c
hidrosis/app/src/layout/: hyprland.c  linux.c  macos.c  util.c  wayland.c  windows.c  x11.c
hidrosis/app/src/log/: log.c  unix.c  util.c  windows.c
hidrosis/app/src/signal_control/: unix.c  windows.c
hidrosis/packaging/linux/: 90-hidrosis.rules
hidrosis/packaging/linux/debian/: control  postinstall  postrm
hidrosis/packaging/linux/fedora/: SPEC
hidrosis/packaging/linux/systemd/: hidrosis.service
hidrosis/packaging/windows/: installer.nsi
keyboards/elephant42/keymaps/daktylos/: config.h  eeprom_config.c  eeprom_config.h  font.c  hid.c  hid.h  key_overrides.c  key_overrides.h  keymap.c  keymap.h  main.c  oled.c  oled.h  rules.mk
